Attempted fix for text overflow

--- a/css/screen.css
+++ b/css/screen.css
@@ -381,42 +381,43 @@ footer {
 /* line 204, ../sass/_style.sass */
 .project-data li {
   margin-top: 0.3em;
+  width: 100%;
   text-overflow: ellipsis; }
 
 /* Hiding and displaying elements with media queries */
 @media screen and (max-width: 480px) {
-  /* line 209, ../sass/_style.sass */
+  /* line 210, ../sass/_style.sass */
   .hidden-phone {
     display: none !important; } }
 
 @media screen and (min-width: 481px) and (max-width: 1024px) {
-  /* line 213, ../sass/_style.sass */
+  /* line 214, ../sass/_style.sass */
   .hidden-tablet {
     display: none !important; } }
 
 @media screen and (min-width: 1025px) {
-  /* line 217, ../sass/_style.sass */
+  /* line 218, ../sass/_style.sass */
   .hidden-desktop {
     display: none !important; } }
 
 /* Tablets and larger screens */
 @media screen and (min-width: 481px) {
-  /* line 224, ../sass/_style.sass */
+  /* line 225, ../sass/_style.sass */
   header p {
     text-align: justify; }
 
-  /* line 227, ../sass/_style.sass */
+  /* line 228, ../sass/_style.sass */
   .text, .project-data {
     padding: 10px;
     min-width: 15em; }
 
-  /* line 231, ../sass/_style.sass */
+  /* line 232, ../sass/_style.sass */
   .project-data li {
     -ms-text-overflow: clip;
     text-overflow: clip; } }
 /* Desktop-only styles */
 @media screen and (min-width: 1025px) {
-  /* line 237, ../sass/_style.sass */
+  /* line 238, ../sass/_style.sass */
   p a[href] {
     color: black;
     text-decoration: underline;
@@ -440,63 +441,63 @@ footer {
       -o-border-radius: 3px;
       border-radius: 3px; }
 
-  /* line 240, ../sass/_style.sass */
+  /* line 241, ../sass/_style.sass */
   #projects {
     width: 100%;
     overflow-x: hidden; }
 
-  /* line 244, ../sass/_style.sass */
+  /* line 245, ../sass/_style.sass */
   div.project-wrap {
     position: relative; }
-    /* line 246, ../sass/_style.sass */
+    /* line 247, ../sass/_style.sass */
     div.project-wrap:nth-child(even) .project {
       position: relative;
       left: -66%; }
 
-  /* line 250, ../sass/_style.sass */
+  /* line 251, ../sass/_style.sass */
   div.project {
     display: table;
     width: 166.66667%; }
-    /* line 253, ../sass/_style.sass */
+    /* line 254, ../sass/_style.sass */
     div.project .row {
       display: table-row; }
-      /* line 255, ../sass/_style.sass */
+      /* line 256, ../sass/_style.sass */
       div.project .row > div {
         display: table-cell;
         vertical-align: middle;
         position: relative;
         left: 0; }
-        /* line 260, ../sass/_style.sass */
+        /* line 261, ../sass/_style.sass */
         div.project .row > div[data-picture] {
           width: 40%; }
-          /* line 262, ../sass/_style.sass */
+          /* line 263, ../sass/_style.sass */
           div.project .row > div[data-picture]:nth-child(even) {
             text-align: right; }
-          /* line 264, ../sass/_style.sass */
+          /* line 265, ../sass/_style.sass */
           div.project .row > div[data-picture] img {
             margin-bottom: -7px; }
 
-  /* line 267, ../sass/_style.sass */
+  /* line 268, ../sass/_style.sass */
   .text {
     padding: 20px;
     width: 20%; }
 
-  /* line 271, ../sass/_style.sass */
+  /* line 272, ../sass/_style.sass */
   .project-data {
     padding: 20px;
     width: 40%;
     border: none;
     text-align: center; }
-    /* line 276, ../sass/_style.sass */
+    /* line 277, ../sass/_style.sass */
     .project-data > div {
       text-align: left;
       display: inline-block; }
 
-  /* line 281, ../sass/_style.sass */
+  /* line 282, ../sass/_style.sass */
   header #me a[href]:hover {
     background: #a3ff4d;
     color: #333333; }
-  /* line 284, ../sass/_style.sass */
+  /* line 285, ../sass/_style.sass */
   header #me a[href].on {
     background: #a3ff4d;
     color: #333333;
@@ -506,12 +507,12 @@ footer {
     -o-border-radius: 3px;
     border-radius: 3px; }
 
-  /* line 289, ../sass/_style.sass */
+  /* line 290, ../sass/_style.sass */
   .collapse {
     position: absolute;
     left: -45px; }
 
-  /* line 293, ../sass/_style.sass */
+  /* line 294, ../sass/_style.sass */
   div.project .row > .slider-control {
     position: relative;
     height: 2em;
@@ -519,6 +520,6 @@ footer {
     line-height: 2em;
     display: none; }
 
-  /* line 299, ../sass/_style.sass */
+  /* line 300, ../sass/_style.sass */
   .slide-out {
     display: table-cell; } }
